--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalenterisovellus</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.2/firebase-database.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <h1>Pieni Kalenterisovellus</h1>
@@ -17,7 +20,5 @@
     </form>
     <h2>Nykyinen ja ensi viikko:</h2>
     <div id="calendar-grid" class="calendar-grid"></div>
-
-    <script src="script.js"></script>
 </body>
 </html>
